# hello_thrift

./: .gitignore  CMakeLists.txt  hello.thrift  hello_client.cpp  hello_server.cpp  readme.md
